Added an alias for /media/ in the Django installer, so that CSS and images used by the admin servlet appear.
Added a script installer for phpLedMailer 1.8, a simple single-mailing-list manager.
Updated the Drupal script installer to support version 6.2.
Added a script installer for Piwik, an open-source web analytics tool.
Post-change scripts have access to the settings of a virtual server before it was changed in the VIRTUALSERVER_OLDSERVER_* environment variables.
If MySQL or PostgreSQL have no root password set, display a warning during the configuration check.
AddHandler, FCGIWrapper and RemoveHandler directives not related to PHP versions Virtualmin knows about are not touched when changing PHP settings.
Limits on the number of processes and amount of RAM and CPU time a process can use can be defined for each virtual server. These apply to CGI and PHP scripts, and when the domain owner logs in via SSH. They are particularly useful for preventing fork bombs and other intentional or accidental denial of service attacks.
When a script has dependencies, all are checked and reported at once rather than being displayed one at a time. This makes complex applications like Rails easier to setup.
When scheduled backups are sent to their domain owners as well, each owner only receives the backup messages related to the domains they own.
Added script installers for Trac and MoinMoin, contributed by Jannis Leidel.
---- Changes since 3.57 ----
Mailbox users' passwords are now shown in a separate popup window, rather than on the Edit Mailbox page where anyone can see them.
Updated the SugarCRM installer to 5.0.0e, ZenPhoto to 1.1.6, and Piwik to 0.1.9.
Modified the 'View website via Webmin' feature to not munge offsite links, only those to the same domain.