@@ -62,6 +62,7 @@ index_astop=Stop Apache
 index_arestart=Restart Apache
 index_astopdesc=The Apache webserver is currently active, and serving virtual server web pages. Click this button to shut it down.
 index_aname=Apache Webserver
+index_amanage=Manage Apache
 index_bstart=Start BIND
 index_bstartdesc=The BIND DNS server is currently down, meaning that DNS domains hosted by this server will be unresolvable. Click this button to start it.
 index_bstop=Stop BIND
@@ -4012,6 +4013,9 @@ history_stat_quotaused=Disk quota used
 history_stat_doms=Number of virtual servers
 history_stat_users=Number of mail and FTP users
 history_stat_aliases=Number of mail aliases
+history_stat_mailcount=Email per minute
+history_stat_spamcount=Spam per minute
+history_stat_viruscount=Viruses per minute
 history_range=$1 from $2 to $3
 history_showing=Showing historic values for : $1
 history_none=No historic system statistics have been recorded yet.
