@@ -917,3 +917,4 @@ Added script installers for Trac and MoinMoin, contributed by Jannis Leidel.
 Mailbox users' passwords are now shown in a separate popup window, rather than on the Edit Mailbox page where anyone can see them.
 Updated the SugarCRM installer to 5.0.0e, ZenPhoto to 1.1.6, and Piwik to 0.1.9.
 Modified the 'View website via Webmin' feature to not munge offsite links, only those to the same domain.
+The number of email messages delivered per minute and the number classified as spam or viruses can now be graphed on the System Statistics page.
